fb oauth finished

--- a/mob-screen-E014.html
+++ b/mob-screen-E014.html
@@ -1,13 +1,13 @@
 
 <html>
 <head>
-<title>screen7</title>
+<title>screen6</title>
 <script type="text/javascript" src="files/resources/lib/jquery/jquery-1.6.4.js"></script>
 <script type="text/javascript" src="files/resources/lib/jquery/plugins/jquery.mousewheel.js"></script>
 <script type="text/javascript" src="files/resources/lib/detectmobilebrowser.js"></script>
 <script type="text/javascript">
 	if(is_mobile_browser()) {
-		top.location.replace('screen-A28A.html');	
+		top.location.replace('screen-E014.html');	
 	}	
 	$(document).ready(function(){
 		if ($.browser.msie) {
@@ -405,7 +405,7 @@
 					<div id="portrait_middle_left_reduced"></div>
 				</div>
 				<div id="portrait_middle_middle">
-					<iframe id="viewport" src="screen-A28A.html" width="320" height="480" name="iframe_viewport" frameborder=0 scrolling="auto" onload="refresh_iframe_parameters()">
+					<iframe id="viewport" src="screen-E014.html" width="320" height="480" name="iframe_viewport" frameborder=0 scrolling="auto" onload="refresh_iframe_parameters()">
 						<p>Your browser does not support iframes.</p>
 					</iframe>
 				</div>
