--- a/screen-4F9F.html
+++ b/screen-4F9F.html
@@ -12,11 +12,11 @@
 
  if (screen_mobile && !browser_mobile && top == window)
  {
-     top.location.href = './mob-screen-800B.html';
+     top.location.href = './mob-screen-4F9F.html';
  }
         </script>
         <title>
-            screen3
+            screen8_FBoutput
         </title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="viewport" content="initial-scale=1" />
@@ -67,34 +67,20 @@
             }).trigger('orientationchange');
         }
         </script>
-        <div data-role="page" style="min-height:480px;" id="j_64" class="type-interior"
-        data-theme='c'>
-            <div data-role="header" data-position="fixed" data-theme='c' name="mobileheader6"
-            id="j_66" class='mobileheader7'>
-                <h1 dsid="mobileheader6">
-                    Perscription Pickup Location
+        <div data-role="page" style="min-height:480px;" id="j_0" class="type-interior" data-theme='c'>
+            <div data-role="header" data-position="fixed" data-theme='c' name="mobileheader2"
+            id="j_2" class='mobileheader1'>
+                <h1 dsid="mobileheader2">
+                    Caption
                 </h1>
             </div>
-            <div data-role="content" id="j_67" name="mobilecontainer6" class="mobilecontainer7"
-            dsid="mobilecontainer6" data-theme='c'>
-                <link href="screen-800B.css" rel="stylesheet" type="text/css" />
-                <script type="text/javascript" src="screen-800B.js">
+            <div data-role="content" id="j_3" name="mobilecontainer2" class="mobilecontainer1"
+            dsid="mobilecontainer2" data-theme='c'>
+                <link href="screen-4F9F.css" rel="stylesheet" type="text/css" />
+                <script type="text/javascript" src="screen-4F9F.js">
                 </script>
-                <div class="mobileimage5_div">
-                    <img class="mobileimage5" src="files/views/assets/asset-1428006" id="j_68" dsid="mobileimage5"
-                    name="mobileimage5" />
-                </div>
-                <div name="mobilelabel17" id="j_69" dsid="mobilelabel17" data-role="tiggr_label"
-                class='mobilelabel14'>
-                    Walgreens
-                </div>
-                <div name="mobilelabel3" id="j_70" dsid="mobilelabel3" data-role="tiggr_label" class='mobilelabel15'>
-                    510 Grand Blvd
-                    <br>
-                    San Francisco, CA610-430-4839
-                </div>
             </div>
-            <div data-role="footer" class="mobilefooter7" data-position="fixed" id="j_71" data-theme='c'>
+            <div data-role="footer" class="mobilefooter1" data-position="fixed" id="j_4" data-theme='c'>
             </div>
         </div>
     </body>
