--- a/screen-A28A.html
+++ b/screen-A28A.html
@@ -16,7 +16,7 @@
  }
         </script>
         <title>
-            choosedoc1
+            screen7
         </title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="viewport" content="initial-scale=1" />
@@ -67,25 +67,29 @@
             }).trigger('orientationchange');
         }
         </script>
-        <div data-role="page" style="min-height:480px;" id="j_58" class="type-interior"
+        <div data-role="page" style="min-height:480px;" id="j_73" class="type-interior"
         data-theme='c'>
             <div data-role="header" data-position="fixed" data-theme='c' name="mobileheader2"
-            id="j_60" class='mobileheader6'>
+            id="j_75" class='mobileheader8'>
                 <h1 dsid="mobileheader2">
-                    Choose a Doctor
+                    MDEASE
                 </h1>
             </div>
-            <div data-role="content" id="j_61" name="mobilecontainer2" class="mobilecontainer6"
+            <div data-role="content" id="j_76" name="mobilecontainer2" class="mobilecontainer8"
             dsid="mobilecontainer2" data-theme='c'>
                 <link href="screen-A28A.css" rel="stylesheet" type="text/css" />
                 <script type="text/javascript" src="screen-A28A.js">
                 </script>
-                <div class="mobilebutton5_wrapper ">
-                    <a data-role="button" name="mobilebutton2" dsid="mobilebutton2" class=' mobilebutton5'
-                    id='j_62' data-inline='false' data-theme='c' tabIndex="1">Login with Facebook</a>
+                <div name="mobilelabel16" id="j_77" dsid="mobilelabel16" data-role="tiggr_label"
+                class='mobilelabel16'>
+                    REVIEW THIS DOCTOR WITH YOUR FRIENDS
+                </div>
+                <div class="mobilebutton6_wrapper ">
+                    <a data-role="button" name="mobilebutton2" dsid="mobilebutton2" class=' mobilebutton6'
+                    id='j_78' data-inline='false' data-theme='c' tabIndex="1">Login with Facebook</a>
                 </div>
             </div>
-            <div data-role="footer" class="mobilefooter6" data-position="fixed" id="j_63" data-theme='c'>
+            <div data-role="footer" class="mobilefooter8" data-position="fixed" id="j_79" data-theme='c'>
             </div>
         </div>
     </body>
