--- a/screen-E014.html
+++ b/screen-E014.html
@@ -12,11 +12,11 @@
 
  if (screen_mobile && !browser_mobile && top == window)
  {
-     top.location.href = './mob-screen-800B.html';
+     top.location.href = './mob-screen-E014.html';
  }
         </script>
         <title>
-            screen3
+            screen6
         </title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="viewport" content="initial-scale=1" />
@@ -67,34 +67,31 @@
             }).trigger('orientationchange');
         }
         </script>
-        <div data-role="page" style="min-height:480px;" id="j_64" class="type-interior"
+        <div data-role="page" style="min-height:480px;" id="j_28" class="type-interior"
         data-theme='c'>
-            <div data-role="header" data-position="fixed" data-theme='c' name="mobileheader6"
-            id="j_66" class='mobileheader7'>
-                <h1 dsid="mobileheader6">
-                    Perscription Pickup Location
+            <div data-role="header" data-position="fixed" data-theme='c' name="mobileheader2"
+            id="j_30" class='mobileheader4'>
+                <h1 dsid="mobileheader2">
+                    MDEASE
                 </h1>
             </div>
-            <div data-role="content" id="j_67" name="mobilecontainer6" class="mobilecontainer7"
-            dsid="mobilecontainer6" data-theme='c'>
-                <link href="screen-800B.css" rel="stylesheet" type="text/css" />
-                <script type="text/javascript" src="screen-800B.js">
+            <div data-role="content" id="j_31" name="mobilecontainer2" class="mobilecontainer4"
+            dsid="mobilecontainer2" data-theme='c'>
+                <link href="screen-E014.css" rel="stylesheet" type="text/css" />
+                <script type="text/javascript" src="screen-E014.js">
                 </script>
-                <div class="mobileimage5_div">
-                    <img class="mobileimage5" src="files/views/assets/asset-1428006" id="j_68" dsid="mobileimage5"
-                    name="mobileimage5" />
+                <div name="mobilepanel4" dsid="mobilepanel4" id="j_32" class="mobilepanel1">
+                    <div class="mobileimage3_div">
+                        <img class="mobileimage3" src="files/views/assets/asset-1427891" id="j_33" dsid="mobileimage3"
+                        name="mobileimage3" />
+                    </div>
                 </div>
-                <div name="mobilelabel17" id="j_69" dsid="mobilelabel17" data-role="tiggr_label"
-                class='mobilelabel14'>
-                    Walgreens
-                </div>
-                <div name="mobilelabel3" id="j_70" dsid="mobilelabel3" data-role="tiggr_label" class='mobilelabel15'>
-                    510 Grand Blvd
-                    <br>
-                    San Francisco, CA610-430-4839
+                <div class="mobilebutton3_wrapper ">
+                    <a data-role="button" name="mobilebutton3" dsid="mobilebutton3" class=' mobilebutton3'
+                    id='j_34' data-inline='false' data-theme='c' tabIndex="1">Sign in with mHealth Connect</a>
                 </div>
             </div>
-            <div data-role="footer" class="mobilefooter7" data-position="fixed" id="j_71" data-theme='c'>
+            <div data-role="footer" class="mobilefooter4" data-position="fixed" id="j_35" data-theme='c'>
             </div>
         </div>
     </body>
