--- a/screen-EABD.html
+++ b/screen-EABD.html
@@ -67,21 +67,31 @@
             }).trigger('orientationchange');
         }
         </script>
-        <div data-role="page" style="min-height:480px;" id="j_65" class="type-interior"
+        <div data-role="page" style="min-height:480px;" id="j_81" class="type-interior"
         data-theme='c'>
             <div data-role="header" data-position="fixed" data-theme='c' name="mobileheader5"
-            id="j_67" class='mobileheader7'>
+            id="j_83" class='mobileheader9'>
                 <h1 dsid="mobileheader5">
-                    Choose a Doctor
+                    MDEASE
                 </h1>
             </div>
-            <div data-role="content" id="j_68" name="mobilecontainer5" class="mobilecontainer7"
+            <div data-role="content" id="j_84" name="mobilecontainer5" class="mobilecontainer9"
             dsid="mobilecontainer5" data-theme='c'>
                 <link href="screen-EABD.css" rel="stylesheet" type="text/css" />
                 <script type="text/javascript" src="screen-EABD.js">
                 </script>
+                <div name="mobilepanel7" dsid="mobilepanel7" id="j_85" class="mobilepanel3">
+                    <div class="mobileimage6_div">
+                        <img class="mobileimage6" src="files/views/assets/asset-1427891" id="j_86" dsid="mobileimage3"
+                        name="mobileimage3" />
+                    </div>
+                </div>
+                <div class="mobilebutton7_wrapper ">
+                    <a data-role="button" name="mobilebutton15" dsid="mobilebutton15" class=' mobilebutton7'
+                    id='j_87' data-inline='false' data-theme='c' tabIndex="1">Sign in with mHealth Connect</a>
+                </div>
             </div>
-            <div data-role="footer" class="mobilefooter7" data-position="fixed" id="j_69" data-theme='c'>
+            <div data-role="footer" class="mobilefooter9" data-position="fixed" id="j_88" data-theme='c'>
             </div>
         </div>
     </body>
