--- a/screen-EC2C.html
+++ b/screen-EC2C.html
@@ -67,47 +67,48 @@
             }).trigger('orientationchange');
         }
         </script>
-        <div data-role="page" style="min-height:480px;" id="j_9" class="type-interior" data-theme='c'>
+        <div data-role="page" style="min-height:480px;" id="j_15" class="type-interior"
+        data-theme='c'>
             <div data-role="header" data-position="fixed" data-theme='c' name="mobileheader6"
-            id="j_11" class='mobileheader2'>
+            id="j_17" class='mobileheader3'>
                 <h1 dsid="mobileheader6">
                     Incoming Patient Visit
                 </h1>
             </div>
-            <div data-role="content" id="j_12" name="mobilecontainer6" class="mobilecontainer2"
+            <div data-role="content" id="j_18" name="mobilecontainer6" class="mobilecontainer3"
             dsid="mobilecontainer6" data-theme='c'>
                 <link href="screen-EC2C.css" rel="stylesheet" type="text/css" />
                 <script type="text/javascript" src="screen-EC2C.js">
                 </script>
-                <div name="mobilelabel12" id="j_13" dsid="mobilelabel12" data-role="tiggr_label"
+                <div name="mobilelabel12" id="j_19" dsid="mobilelabel12" data-role="tiggr_label"
                 class='mobilelabel1'>
                     SMS Alert
                 </div>
                 <div class="mobileimage2_div">
-                    <img class="mobileimage2" src="files/views/assets/asset-1428128" id="j_14" dsid="mobileimage4"
+                    <img class="mobileimage2" src="files/views/assets/asset-1428128" id="j_20" dsid="mobileimage4"
                     name="mobileimage4" />
                 </div>
-                <div name="mobilelabel7" id="j_15" dsid="mobilelabel7" data-role="tiggr_label" class='mobilelabel2'>
+                <div name="mobilelabel7" id="j_21" dsid="mobilelabel7" data-role="tiggr_label" class='mobilelabel2'>
                     Name: Ryan Miller
                 </div>
-                <div name="mobilelabel13" id="j_16" dsid="mobilelabel13" data-role="tiggr_label"
+                <div name="mobilelabel13" id="j_22" dsid="mobilelabel13" data-role="tiggr_label"
                 class='mobilelabel3'>
                     Height: 5'11
                 </div>
-                <div name="mobilelabel10" id="j_17" dsid="mobilelabel10" data-role="tiggr_label"
+                <div name="mobilelabel10" id="j_23" dsid="mobilelabel10" data-role="tiggr_label"
                 class='mobilelabel4'>
                     Weight: 182lbs
                 </div>
                 <div data-role="fieldcontain" class="mobiletextarea2">
-                    <textarea name="mobiletextarea4" id="j_18" tabIndex="1" dsid="mobiletextarea4" data-theme='c'
+                    <textarea name="mobiletextarea4" id="j_24" tabIndex="1" dsid="mobiletextarea4" data-theme='c'
                     class='mobiletextarea2'>Very sluggish, sniffing nose.  :(</textarea>
                 </div>
                 <div class="mobilebutton2_wrapper ">
                     <a data-role="button" name="mobilebutton3" dsid="mobilebutton3" class=' mobilebutton2'
-                    id='j_19' data-inline='false' data-theme='c' tabIndex="2">Accept Visit</a>
+                    id='j_25' data-inline='false' data-theme='c' tabIndex="2">Accept Visit</a>
                 </div>
             </div>
-            <div data-role="footer" class="mobilefooter2" data-position="fixed" id="j_20" data-theme='c'>
+            <div data-role="footer" class="mobilefooter3" data-position="fixed" id="j_26" data-theme='c'>
             </div>
         </div>
     </body>
