--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<html>
+    
+    <head>
+        <meta http-equiv="REFRESH" content="0;url=screen-EABD.html">
+    </head>
+    
+    <body>
+    </body>
 
-
-<div rel="YXA2E7VS" class="lrdiscoverwidget" data-logo="on" data-background="on" data-share-url="mdease.com" data-css=""></div><script type="text/javascript" src="http://launchrock-ignition.s3.amazonaws.com/ignition.1.1.js"></script>
+</html>
